Changes in 1.4.4
================

Everything in 1.3.17 (see below), plus: 

New features:
- 3597805 Restart HTTP daemon without restarting SFCB
- 3597806 Bind to arbitrary list of IP addresses in SFCB

Bugs fixed:
- 3599526 segfault during ecn with classProviderSf
- 3599329 dlopen failed for sfcbCustomLib
- 3600125 Share client tracing shm segment
- 3600283 Fixup compiler warnings from gcc 4.7
- 3600159 TestProviders should have their own Makefile
- 3601026 Fixup compiler warnings from -Wextra
- 3599437 missing include of <sys/resource.h>
- 3601301 Add stubs for empty CMPI functions for internal providers

Changes in 1.4.3
================

Everything in 1.3.13, 1.3.14, 1.3.15, and 1.3.16 (see below), plus: 

New features:
- 3441679 Add a feature to validate CMPI types
- 3497831 Updates to sfcb-ps test script
- 3506453 Support peer cert verification for SSL indications
- 3531210 Allow indication delivery timeout tuning
- 3562538 Enable curl debug via env variable
- 3590203 Remove pg_interop checking in SFCB 1.4
- 3590202 Enable IPv6 by default for SFCB 1.4
- 3592822 Bump schema to 2.34

Bugs fixed: 
- 3495804 Cleanup: httpProcId still defined, wrong define in cimXmlGen
- 3516167 Force kill sfcbd on stop if needed
- 2966659 Cleanup https daemon remnants
- 3527674 Faster Startup
- 3529879 Fixes for sfcb-ps test script
- 3527714 Every other EnumerateClasses fails
- 3541554 insecure LD_LIBRARY_PATH usage
- 3546279 Core dump in providerDrv on Qualifier not found
- 3564757 stageschema.sh should detect errors in sfcbrepos
- 3567083 configure should fail if sfcUtil.so not found
- 3573507 CreateInstance for IndicationFilter doesn't accept DMTF:CQL
- 3579637 SFCB should check ftok return code
- 3562530 TestMiscProvider poorly tests CMGetPropertyAt
- 3585929 Additional ClassProviderSf prep work
- 3588775 Startup will hang if indication support is disabled
- 3590827 Exit if classprovider fails
- 3591112 NEEDS_CLEANUP ifdef
- 3591102 sfcbrepos and -t