@@ -1,0 +1,73 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="10001" PROTOCOLVERSION="1.0">
+<SIMPLERSP>
+<IMETHODRESPONSE NAME="EnumerateInstances">
+<IRETURNVALUE>
+<VALUE.NAMEDINSTANCE>
+<INSTANCENAME CLASSNAME="Sample_Instance">
+<KEYBINDING NAME="Identifier">
+<KEYVALUE VALUETYPE="numeric">1</KEYVALUE>
+</KEYBINDING>
+</INSTANCENAME>
+<INSTANCE CLASSNAME="Sample_Instance">
+<PROPERTY NAME="Identifier" TYPE="uint8">
+<VALUE>1</VALUE>
+</PROPERTY>
+<PROPERTY NAME="Einst" EmbeddedObject="object" TYPE="string">
+<VALUE><![CDATA[<INSTANCE CLASSNAME="Sample_Instance">
+<PROPERTY NAME="Identifier" TYPE="uint8">
+<VALUE>1</VALUE>
+</PROPERTY>
+<PROPERTY NAME="Einst" EmbeddedObject="object" TYPE="string">
+</PROPERTY>
+<PROPERTY NAME="Message" TYPE="string">
+<VALUE>I&apos;m an EmbeddedObject</VALUE>
+</PROPERTY>
+</INSTANCE>
+]]></VALUE>
+</PROPERTY>
+<PROPERTY NAME="Message" TYPE="string">
+<VALUE>Hello World</VALUE>
+</PROPERTY>
+</INSTANCE>
+</VALUE.NAMEDINSTANCE>
+<VALUE.NAMEDINSTANCE>
+<INSTANCENAME CLASSNAME="Sample_Instance">
+<KEYBINDING NAME="Identifier">
+<KEYVALUE VALUETYPE="numeric">2</KEYVALUE>
+</KEYBINDING>
+</INSTANCENAME>
+<INSTANCE CLASSNAME="Sample_Instance">
+<PROPERTY NAME="Identifier" TYPE="uint8">
+<VALUE>2</VALUE>
+</PROPERTY>
+<PROPERTY NAME="Einst" EmbeddedObject="object" TYPE="string">
+</PROPERTY>
+<PROPERTY NAME="Message" TYPE="string">
+<VALUE>Yo Planet</VALUE>
+</PROPERTY>
+</INSTANCE>
+</VALUE.NAMEDINSTANCE>
+<VALUE.NAMEDINSTANCE>
+<INSTANCENAME CLASSNAME="Sample_Instance">
+<KEYBINDING NAME="Identifier">
+<KEYVALUE VALUETYPE="numeric">3</KEYVALUE>
+</KEYBINDING>
+</INSTANCENAME>
+<INSTANCE CLASSNAME="Sample_Instance">
+<PROPERTY NAME="Identifier" TYPE="uint8">
+<VALUE>3</VALUE>
+</PROPERTY>
+<PROPERTY NAME="Einst" EmbeddedObject="object" TYPE="string">
+</PROPERTY>
+<PROPERTY NAME="Message" TYPE="string">
+<VALUE>Hey Earth</VALUE>
+</PROPERTY>
+</INSTANCE>
+</VALUE.NAMEDINSTANCE>
+</IRETURNVALUE>
+</IMETHODRESPONSE>
+</SIMPLERSP>
+</MESSAGE>
+</CIM>
