@@ -1,43 +1,0 @@
-<INSTANCENAME CLASSNAME="Sample_Instance">
-<KEYBINDING NAME="Identifier">
-<KEYVALUE VALUETYPE="numeric">1</KEYVALUE>
-</KEYBINDING>
-</INSTANCENAME>
-<INSTANCE CLASSNAME="Sample_Instance">
-<PROPERTY NAME="Message" TYPE="string">
-<VALUE>Hello World</VALUE>
-</PROPERTY>
-<PROPERTY NAME="Identifier" TYPE="uint8">
-<VALUE>1</VALUE>
-</PROPERTY>
-</INSTANCE>
-</VALUE.NAMEDINSTANCE>
-<VALUE.NAMEDINSTANCE>
-<INSTANCENAME CLASSNAME="Sample_Instance">
-<KEYBINDING NAME="Identifier">
-<KEYVALUE VALUETYPE="numeric">2</KEYVALUE>
-</KEYBINDING>
-</INSTANCENAME>
-<INSTANCE CLASSNAME="Sample_Instance">
-<PROPERTY NAME="Message" TYPE="string">
-<VALUE>Yo Planet</VALUE>
-</PROPERTY>
-<PROPERTY NAME="Identifier" TYPE="uint8">
-<VALUE>2</VALUE>
-</PROPERTY>
-</INSTANCE>
-</VALUE.NAMEDINSTANCE>
-<VALUE.NAMEDINSTANCE>
-<INSTANCENAME CLASSNAME="Sample_Instance">
-<KEYBINDING NAME="Identifier">
-<KEYVALUE VALUETYPE="numeric">3</KEYVALUE>
-</KEYBINDING>
-</INSTANCENAME>
-<INSTANCE CLASSNAME="Sample_Instance">
-<PROPERTY NAME="Message" TYPE="string">
-<VALUE>Hey Earth</VALUE>
-</PROPERTY>
-<PROPERTY NAME="Identifier" TYPE="uint8">
-<VALUE>3</VALUE>
-</PROPERTY>
-</INSTANCE>
