@@ -11,4 +11,7 @@ class Sample_Instance : Sample_Class
 {
 	[read, write]
 	string Message;
+
+        [EmbeddedObject]
+        string Einst;
 };
