@@ -6,6 +6,7 @@ Everything in 1.3.17 (see below), plus:
 New features:
 - 3597805 Restart HTTP daemon without restarting SFCB
 - 3597806 Bind to arbitrary list of IP addresses in SFCB
+- 3601386 Add test for EmbeddedObject output
 
 Bugs fixed:
 - 3599526 segfault during ecn with classProviderSf
